--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,18 @@
-# 1. We must use version 2.1 to enable orbs.
-version: 2.1
-
-# 2. Bring in the current version of the aws-serverless orb
+version: '2.1'
 orbs:
-  # 3. We name our imported orb “sam”
-  sam: circleci/aws-serverless@1.0.1
-
+  sam: circleci/aws-sam-serverless@3.2
+jobs:
+  test_my_api:
+    docker:
+      - image: 'cimg/node:lts'
+    steps:
+      - run: echo "Run your API tests here"
 workflows:
-  build_and_deploy:
+  test_and_deploy:
     jobs:
-      # 4. imported-name/job
       - sam/deploy:
-          name: deploy-production
-          s3-bucket: $AWS_ARTIFACT_BUCKET
-          stack-name: production-stack
-          template: template.yaml
+          context: personal-AWS-context
+          name: deploy-staging
+          s3-bucket: my-s3-bucket
+          stack-name: staging-stack
+          template: ./path/to/template.yml
