--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,4 @@ workflows:
           name: deploy-staging
           s3-bucket: my-s3-bucket
           stack-name: staging-stack
-          template: ./path/to/template.yml
+          template: ../template.yml
