--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: '2.1'
 orbs:
   sam: circleci/aws-sam-serverless@3.2
 jobs:
-  test_my_api:
+  lambda-build:
     docker:
       - image: 'cimg/node:lts'
     steps:
@@ -10,9 +10,14 @@ jobs:
 workflows:
   test_and_deploy:
     jobs:
+      - lambda-build:
       - sam/deploy:
           context: personal-AWS-context-<< pipeline.git.branch >>
           name: deploy-staging
+          requires:
+            - lambda-build
           s3-bucket: my-s3-bucket
           stack-name: staging-stack
           template: template.yaml
+          capabilities: CAPABILITY_NAMED_IAM
+          version:
