--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,16 +9,16 @@ jobs:
     steps:
       - checkout
       - node/install-packages:
-          pkg-manager: yarn
+          pkg-manager: npm
       - run:
-          command: yarn test
+          command: cd hello-world
+          name: cd
+      - run:
+          command: npm run test
           name: Run tests
       - run:
-          command: yarn build
-          name: Build app
-      - persist_to_workspace:
-          root: ~/project
-          paths: .
+          command: npm install
+          name: install dependenices
 workflows:
   build_and_deploy:
     jobs:
